add checks for input parameters